# collab-workboard

./: .gitignore  README.md  test.html
misc/: example.nginx.vhost
workboard-frontend/: index.html  test.html  workboard-semantic.css  workboard-semantic.js
workboard-server/: stack.yaml  workboard-server.cabal
workboard-server/.stack-work/install/x86_64-linux/lts-6.0/7.10.3/flag-cache/: aeson-0.11.2.0-b44dce9dceed15719c7c9b320d0db8da  atomic-write-0.2.0.5-d134fbd0ace520a50fe0a1f33d8d5685  attoparsec-0.13.0.2-1e0ddf88a11f20164d0b8d113c656d88  dlist-0.7.1.2-ff29ea897ce0546ab24638745f33b7b9  exceptions-0.8.2.1-08ed62d2282590eb80eba3e5c42a5f4e  fail-4.9.0.0-dd8812a5b6b0a0ce790ee5a93be03a9d  hashable-1.2.4.0-eb8410705fa05638eebff0131e5dac80  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  primitive-0.6.1.0-b2a7b9f8d5591c0d4ce7ef238a3217d2  scientific-0.3.4.6-8c82b68f61be3d657b38432462e789d6  semigroups-0.18.1-2336b6b8ba1d3d7ac48e8c93de2df50f  stm-2.4.4.1-7050c728ed5b2315e2c6b56d8bf9837f  syb-0.6-d154b8ffa473f7cfcfc32ca4d99f62f7  tagged-0.8.4-9a04b6ba5af4681c23b22a393e2724e7  temporary-1.2.0.4-96917e41e3d087d3ab816017b3a43b02  text-1.2.2.1-f5b1651133426aa2c83c19d64d248779  transformers-compat-0.4.0.4-8aa4073730c676dbe210ea8bffd8d092  unix-compat-0.4.1.4-1e201f07f357b593e8ba1a46086e3ec5  unordered-containers-0.2.7.0-d27ab62b787be572d20f68e8dfdfa62c  vector-0.11.0.0-299aefb173ce5a731565d31f609a0cfd  workboard-server-0.1.0.0-d8ba13b6da063ab1cf583fac87356533
workboard-server/.stack-work/install/x86_64-linux/lts-6.0/7.10.3/lib/x86_64-linux-ghc-7.10.3/workboard-server-0.1.0.0-LVKJ8M3BbrDEpbwAXeCze1/System/EventStream/: Persistence.dyn_hi  Persistence.hi
workboard-server/app/: Main.hs
workboard-server/src/Service/: Chat.hs
workboard-server/src/Service/Chat/: Server.hs  StateAggregator.hs
