name:                workboard-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ardamose123/collab-workboard
license:             BSD3
license-file:        LICENSE
author:              Ariel David Moya Sequeira
maintainer:          ardamose123@gmail.com
copyright:           2016 Ariel David Moya Sequeira
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:       src
  exposed-modules:      Service.Chat, Service.Chat.Server
  build-depends:        base >= 4.7 && < 5
                      , aeson
                      , atomic-write
                      , bytestring
                      , directory
                      , filepath
                      , servant-server
                      , stm
                      , transformers
                      , wai
                      , warp
  default-language:     Haskell2010

executable workboard-server
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  build-depends:        base
                      , workboard-server
                      , aeson
                      , directory
                      , servant-server
                      , wai
                      , warp
  default-language:     Haskell2010

test-suite workboard-server-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  build-depends:        base
                      , workboard-server
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/ardamose123/collab-workboard
